<resources>
    <string name="app_name">LecturaKids</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Comencemos!</string>
    <string name="information">Information</string>
    <string name="registro">Registro de Lecturas</string>
    <string name="principiante">Principiante</string>
    <string name="intermedio">Intermedio</string>
    <string name="avanzado">Avanzado</string>
    <string name="reading_random">Lectura Aleatoria</string>
    <string name="select_a_level">Selecciona un nivel:</string>
    <string name="description_level">Fácil: Ideal para principiantes y jóvenes lectores. Textos cortos y vocabulario sencillo.\n\nIntermedio: Un desafío adecuado para lectores en desarrollo. Textos más extensos y mayor variedad de palabras.\n\nDifícil: Para lectores avanzados. Textos más complejos y vocabulario amplio.</string>
    <string name="contenido_lectura_ejemplo">Hola, me llamo Laura. Hoy quiero contarte sobre mi gato travieso, Max.\n\nMax es un gato pequeño y peludo. Tiene ojos grandes y brillantes, y su pelaje es de color negro y blanco.

A Max le gusta explorar y jugar por toda la casa. Un día, encontró una bola de estambre y comenzó a jugar con ella. Saltaba y corría por todos lados, persiguiendo la bola de estambre. ¡Qué divertido era verlo!

\nMax también le gusta esconderse. A veces se oculta debajo de la cama o detrás de las cortinas. \nCuando lo buscamos, nos sorprende saltando y maullando, como si estuviera diciendo: "¡Aquí estoy!"

\n\nA pesar de ser travieso, Max es un gato cariñoso. Siempre viene a buscarme cuando me siento triste o enferma. Se acurruca a mi lado y ronronea suavemente. Eso me hace sentir mejor.

\n\nCuidar de Max es importante. Le doy comida y agua fresca todos los días. También lo llevo al veterinario para que esté sano. Me encanta tener a Max como mi compañero.

\n\nEspero que te haya gustado conocer a mi gato travieso, Max. ¡Hasta la próxima!</string>
    <string name="reading_selected">Seleccionar Lectura</string>
    <string name="app_description">Una aplicación educativa diseñada para mejorar las habilidades de lectura de los niños.</string>
    <string name="name_app">LecturaKids</string>
    <string name="imagen_descriptiva">imagen descriptiva</string>
    <string name="comprueba_tu_comprensi_n">Comprueba tu comprensión</string>
    <string name="enviar">Enviar</string>
    <string name="respuestas_correctas">Respuestas Correctas</string>
    <string name="tiempo_de_lectura">Tiempo de Lectura</string>
    <string name="comparte_tu_logro">Comparte tu logro!</string>
    <string name="terminar">Terminar</string>
    <string name="informe_de_lecturas">Informe de Lecturas</string>


    <string name="message_congratulations">¡Excelente!</string>
    <string name="message_completion_correct">Has completado correctamente la lectura:</string>
    <string name="message_completion">Has completado la lectura:</string>
    <string name="message_felicitations">¡Felicitaciones!</string>
    <string name="message_attention">¿Distraído?</string>
    <string name="message_retry">Sigue intentando y ahora con más atención la lectura:</string>



</resources>