<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.InicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/gradient_inicio"
        tools:context=".InicioFragment">

        <ImageView
            android:id="@+id/inicioImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/leyendo"/>

        <TextView
            android:id="@+id/text_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_app"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/textTitle2"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/inicioImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_description"
            android:textColor="@color/textBody2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/text_name_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/get_started"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:textColor="@color/textTitle2"
            app:layout_constraintDimensionRatio="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnStInformation"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStInformation"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:lines="2"
            android:textColor="@color/textTitle2"
            android:backgroundTint="@color/accent1"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>