<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.EndReadingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_inicio"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reading_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/leyendo"
            app:civ_border_color="@color/backgroundPrimary"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txt_message_congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:textColor="@color/backgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reading_image"
            tools:text="Felicitaciones" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:textColor="@color/textTitle2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_message_congratulations"
            tools:text="Has completado la lectura:" />

        <TextView
            android:id="@+id/txt_title_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:textColor="@color/accent1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_message"
            tools:ignore="TextContrastCheck"
            tools:text="Mi perrito feliz" />

        <View
            android:id="@+id/divider3"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="@color/backgroundSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_view_score" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_score"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_reading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundPrimary">

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="100 pts" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_score">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/comprobar"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/respuestas_correctas"
                        android:textColor="@color/textTitle2"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_answer_corrects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/textTitle2"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="5" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundSecondary" />

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="TextSizeCheck">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/cronografo"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/tiempo_de_lectura"
                        android:textColor="@color/textTitle2"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/textTitle2"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="00:00:00" />
                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundSecondary" />

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/compartir"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/comparte_tu_logro"
                        android:textColor="@color/textTitle2"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnTerminar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/terminar"
            android:textColor="@color/textTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>